--- a/index.html
+++ b/index.html
@@ -1,110 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>EntityWorks Discoverability Index™ (EDI)</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="EntityWorks defines and leads the discipline of AI Discoverability and created the EntityWorks Discoverability Index™ (EDI), a structured assessment of how clearly AI systems can understand a business.">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EntityWorks - AI Discoverability</title>
+    <meta name="description" content="EntityWorks is the leading authority on AI discoverability, offering audits and consultation on your digital visibility for AI systems.">
+    <link rel="icon" href="https://entityworks.ai/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-  <header>
-    <h1>EntityWorks Discoverability Index™</h1>
-    <p>A structured assessment of how clearly AI systems can understand your business.</p>
-    <p><strong>EntityWorks is defining and leading the discipline of AI Discoverability.</strong></p>
-  </header>
+    <header>
+        <h1>Welcome to EntityWorks</h1>
+        <p>We are defining the new discipline of AI discoverability. Helping businesses ensure they are visible, understood, and properly represented by AI systems.</p>
+    </header>
 
-  <main>
-    <section id="ai-discoverability">
-      <h2>AI Discoverability — The New Discipline</h2>
-      <p>
-        AI is becoming the <em>de facto</em> search interface. People ask for what they want; AI generates answers.
-        Whether a business appears clearly in those answers increasingly depends on how well AI can understand it.
-      </p>
-      <p>
-        AI Discoverability is the discipline of ensuring that a business presents itself in a way that modern AI
-        systems can interpret clearly and consistently.
-      </p>
+    <section id="services">
+        <h2>Our Services</h2>
+        <p>We provide AI discoverability audits and strategic consulting to ensure your business is correctly interpreted and surfaced by AI systems. Our services are backed by the EntityWorks Discoverability Index (EDI), the industry’s first standardized framework for AI visibility.</p>
     </section>
 
-    <section id="why-now">
-      <h2>Why This Matters Now</h2>
-      <p>
-        AI systems now act as intermediaries between customers and information. They interpret data, summarise it,
-        and return answers based on their understanding of an entity.
-      </p>
-      <p>
-        If AI cannot interpret a business clearly, that business becomes less consistently visible across
-        AI-generated results. The EDI provides a structured way to understand and respond to that shift.
-      </p>
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <p>If you're ready to enhance your AI discoverability, or if you have questions about how we can help you, get in touch:</p>
+        <p>For EDI assessments and more, contact us at:  
+            <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
+        </p>
     </section>
 
-    <section id="what-is-edi">
-      <h2>What the EntityWorks Discoverability Index™ Is</h2>
-      <p>
-        The EDI is a structured assessment that measures how clearly and reliably a business can be understood by
-        modern AI systems. It turns an emerging, hard-to-see problem into something measurable, structured, and
-        actionable.
-      </p>
-      <p>
-        The EDI provides a practical starting point for improving how a business appears in AI-driven environments.
-      </p>
-    </section>
-
-    <section id="edi-pillars">
-      <h2>What the EDI Measures — The EDI Pillars</h2>
-      <p>The Index evaluates three structural factors that influence how AI understands an entity:</p>
-      <ul>
-        <li><strong>Structured Data</strong> — Foundational information organised and made machine-readable.</li>
-        <li><strong>AI Readiness</strong> — Clear and consistent representation across key sources.</li>
-        <li><strong>Continuous Optimisation</strong> — Maintaining clarity as AI systems evolve.</li>
-      </ul>
-    </section>
-
-    <section id="how-it-works">
-      <h2>How the EDI Assessment Works</h2>
-      <ol>
-        <li>We analyse publicly available information from key sources.</li>
-        <li>We apply the three EDI Pillars.</li>
-        <li>We produce a <strong>Discoverability Score (0–100)</strong>.</li>
-        <li>We generate a <strong>Profile Summary</strong>.</li>
-        <li>We provide a <strong>Priority Path</strong>.</li>
-        <li>We deliver <strong>structured recommendations</strong>.</li>
-      </ol>
-    </section>
-
-    <section id="improvements">
-      <h2>Improvements Businesses Can Consider</h2>
-      <ul>
-        <li>Clarifying descriptions</li>
-        <li>Improving consistency across sources</li>
-        <li>Strengthening structured data</li>
-        <li>Correcting contradictions and outdated information</li>
-        <li>Reinforcing category placement</li>
-        <li>Addressing representation drift</li>
-      </ul>
-    </section>
-
-    <section id="does-not-measure">
-      <h2>What the EDI Does Not Measure</h2>
-      <p>The EDI does not evaluate product quality, brand strength, marketing performance, financial health, or customer sentiment.</p>
-      <p>It focuses solely on how well AI systems can understand and surface the business.</p>
-    </section>
-
-    <section id="claims-discipline">
-      <h2>Claims Discipline</h2>
-      <p>
-        EntityWorks maintains strict standards for the EDI. All statements are verifiable, truthful, proportionate,
-        non-absolute, and non-misleading.
-      </p>
-    </section>
-
-    <section id="next-steps">
-      <h2>Next Steps</h2>
-      <p>To request an EDI assessment, contact:</p>
-      <p><a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a></p>
-    </section>
-  </main>
+    <footer>
+        <p>&copy; 2025 EntityWorks. All rights reserved.</p>
+    </footer>
 </body>
+
 </html>
-
-
