--- a/index.html
+++ b/index.html
@@ -1,37 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="EntityWorks - AI Discoverability and Visibility">
+    <meta name="keywords" content="AI, Discoverability, Visibility, Indexing, EntityWorks">
+    <meta name="author" content="Neale Welch">
     <title>EntityWorks - AI Discoverability</title>
-    <meta name="description" content="EntityWorks is the leading authority on AI discoverability, offering audits and consultation on your digital visibility for AI systems.">
-    <link rel="icon" href="https://entityworks.ai/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #111;
+            color: white;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+        }
+        header {
+            padding: 50px 0;
+            background: #222;
+        }
+        h1 {
+            font-size: 3em;
+            color: #00b5e2;
+        }
+        p {
+            font-size: 1.2em;
+            color: #bbb;
+        }
+        footer {
+            padding: 20px;
+            background: #222;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+            text-align: center;
+        }
+        a {
+            color: #00b5e2;
+            text-decoration: none;
+        }
+    </style>
 </head>
-
 <body>
-    <header>
-        <h1>Welcome to EntityWorks</h1>
-        <p>We are defining the new discipline of AI discoverability. Helping businesses ensure they are visible, understood, and properly represented by AI systems.</p>
-    </header>
 
-    <section id="services">
-        <h2>Our Services</h2>
-        <p>We provide AI discoverability audits and strategic consulting to ensure your business is correctly interpreted and surfaced by AI systems. Our services are backed by the EntityWorks Discoverability Index (EDI), the industry’s first standardized framework for AI visibility.</p>
-    </section>
+<header>
+    <h1>Welcome to EntityWorks</h1>
+    <p>Your partner in AI discoverability and visibility</p>
+</header>
 
-    <section id="contact">
-        <h2>Contact Us</h2>
-        <p>If you're ready to enhance your AI discoverability, or if you have questions about how we can help you, get in touch:</p>
-        <p>For EDI assessments and more, contact us at:  
-            <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
-        </p>
-    </section>
+<main>
+    <h2>AI Discoverability Index™</h2>
+    <p>We are shaping the future of AI indexing, helping brands ensure they are visible, trusted, and understood by AI systems.</p>
+    <p><a href="mailto:hello@entityworks.ai">Contact us</a> for more information.</p>
+</main>
 
-    <footer>
-        <p>&copy; 2025 EntityWorks. All rights reserved.</p>
-    </footer>
+<footer>
+    <p>&copy; 2025 EntityWorks. All Rights Reserved.</p>
+</footer>
+
 </body>
-
 </html>
