--- a/index.html
+++ b/index.html
@@ -3,43 +3,94 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="EntityWorks - AI Discoverability and Visibility">
-    <meta name="keywords" content="AI, Discoverability, Visibility, Indexing, EntityWorks">
+    <meta name="description" content="EntityWorks - AI Discoverability and Indexing Solutions">
+    <meta name="keywords" content="AI, Discoverability, Visibility, EntityWorks, Indexing, Generative AI, AI Models">
     <meta name="author" content="Neale Welch">
     <title>EntityWorks - AI Discoverability</title>
+
+    <!-- External Stylesheet Link -->
     <link rel="stylesheet" href="styles.css">
+
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #111;
-            color: white;
             margin: 0;
             padding: 0;
+            background-color: #111;
+            color: white;
             text-align: center;
         }
+
         header {
-            padding: 50px 0;
-            background: #222;
+            background-color: #222;
+            padding: 100px 0;
+            margin-bottom: 50px;
         }
-        h1 {
-            font-size: 3em;
+
+        header h1 {
+            font-size: 4em;
             color: #00b5e2;
+            font-weight: bold;
         }
-        p {
+
+        header p {
             font-size: 1.2em;
             color: #bbb;
         }
+
+        main {
+            padding: 50px;
+        }
+
+        section {
+            margin-bottom: 50px;
+        }
+
+        h2 {
+            font-size: 2.5em;
+            color: #00b5e2;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+
+        p {
+            font-size: 1.1em;
+            color: #bbb;
+        }
+
         footer {
+            background-color: #222;
             padding: 20px;
-            background: #222;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
+            color: #aaa;
             text-align: center;
         }
+
         a {
             color: #00b5e2;
             text-decoration: none;
+        }
+
+        /* Responsive Design for Smaller Screens */
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 2.5em;
+            }
+
+            header p {
+                font-size: 1em;
+            }
+
+            main {
+                padding: 30px;
+            }
+
+            section {
+                margin-bottom: 30px;
+            }
+
+            h2 {
+                font-size: 2em;
+            }
         }
     </style>
 </head>
@@ -47,13 +98,29 @@
 
 <header>
     <h1>Welcome to EntityWorks</h1>
-    <p>Your partner in AI discoverability and visibility</p>
+    <p>Your trusted partner for AI discoverability and visibility solutions</p>
 </header>
 
 <main>
-    <h2>AI Discoverability Index™</h2>
-    <p>We are shaping the future of AI indexing, helping brands ensure they are visible, trusted, and understood by AI systems.</p>
-    <p><a href="mailto:hello@entityworks.ai">Contact us</a> for more information.</p>
+    <section>
+        <h2>AI Discoverability Index™</h2>
+        <p>We help brands ensure that their information is visible, structured, and trusted by AI systems, allowing them to be recognized and indexed by leading AI models like GPT and Gemini.</p>
+    </section>
+
+    <section>
+        <h2>What We Do</h2>
+        <p>EntityWorks specializes in helping businesses understand and improve their AI visibility, by offering comprehensive discoverability audits and actionable insights to ensure your brand stands out in the AI era.</p>
+    </section>
+
+    <section>
+        <h2>Our Methodology</h2>
+        <p>We use our proprietary AI Discoverability Index™ (ADI), a weighted model that evaluates your brand's presence across the AI ecosystem. The ADI evaluates key factors like generative visibility, structured data, trustworthiness, and perception by AI models.</p>
+    </section>
+
+    <section>
+        <h2>Get in Touch</h2>
+        <p>Have questions? Want to learn more about how we can help your brand improve its AI discoverability? <a href="mailto:hello@entityworks.ai">Contact us today!</a></p>
+    </section>
 </main>
 
 <footer>
