--- a/index.html
+++ b/index.html
@@ -1,131 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="EntityWorks - AI Discoverability and Indexing Solutions">
-    <meta name="keywords" content="AI, Discoverability, Visibility, EntityWorks, Indexing, Generative AI, AI Models">
-    <meta name="author" content="Neale Welch">
-    <title>EntityWorks - AI Discoverability</title>
-
-    <!-- External Stylesheet Link -->
-    <link rel="stylesheet" href="styles.css">
-
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #111;
-            color: white;
-            text-align: center;
-        }
-
-        header {
-            background-color: #222;
-            padding: 100px 0;
-            margin-bottom: 50px;
-        }
-
-        header h1 {
-            font-size: 4em;
-            color: #00b5e2;
-            font-weight: bold;
-        }
-
-        header p {
-            font-size: 1.2em;
-            color: #bbb;
-        }
-
-        main {
-            padding: 50px;
-        }
-
-        section {
-            margin-bottom: 50px;
-        }
-
-        h2 {
-            font-size: 2.5em;
-            color: #00b5e2;
-            font-weight: bold;
-            margin-bottom: 10px;
-        }
-
-        p {
-            font-size: 1.1em;
-            color: #bbb;
-        }
-
-        footer {
-            background-color: #222;
-            padding: 20px;
-            color: #aaa;
-            text-align: center;
-        }
-
-        a {
-            color: #00b5e2;
-            text-decoration: none;
-        }
-
-        /* Responsive Design for Smaller Screens */
-        @media (max-width: 768px) {
-            header h1 {
-                font-size: 2.5em;
-            }
-
-            header p {
-                font-size: 1em;
-            }
-
-            main {
-                padding: 30px;
-            }
-
-            section {
-                margin-bottom: 30px;
-            }
-
-            h2 {
-                font-size: 2em;
-            }
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>EntityWorks Discoverability Index™ (EDI)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="EntityWorks defines and leads the discipline of AI Discoverability and created the EntityWorks Discoverability Index™ (EDI), a structured assessment of how clearly AI systems can understand a business.">
 </head>
 <body>
+  <header>
+    <h1>EntityWorks Discoverability Index™</h1>
+    <p>A structured assessment of how clearly AI systems can understand your business.</p>
+    <p><strong>EntityWorks is defining and leading the discipline of AI Discoverability.</strong></p>
+  </header>
 
-<header>
-    <h1>Welcome to EntityWorks</h1>
-    <p>Your trusted partner for AI discoverability and visibility solutions</p>
-</header>
-
-<main>
-    <section>
-        <h2>AI Discoverability Index™</h2>
-        <p>We help brands ensure that their information is visible, structured, and trusted by AI systems, allowing them to be recognized and indexed by leading AI models like GPT and Gemini.</p>
+  <main>
+    <section id="ai-discoverability">
+      <h2>AI Discoverability — The New Discipline</h2>
+      <p>
+        AI is becoming the <em>de facto</em> search interface. People ask for what they want; AI generates answers.
+        Whether a business appears clearly in those answers increasingly depends on how well AI can understand it.
+      </p>
+      <p>
+        AI Discoverability is the discipline of ensuring that a business presents itself in a way that modern AI
+        systems can interpret clearly and consistently.
+      </p>
     </section>
 
-    <section>
-        <h2>What We Do</h2>
-        <p>EntityWorks specializes in helping businesses understand and improve their AI visibility, by offering comprehensive discoverability audits and actionable insights to ensure your brand stands out in the AI era.</p>
+    <section id="why-now">
+      <h2>Why This Matters Now</h2>
+      <p>
+        AI systems now act as intermediaries between customers and information. They interpret data, summarise it,
+        and return answers based on their understanding of an entity.
+      </p>
+      <p>
+        If AI cannot interpret a business clearly, that business becomes less consistently visible across
+        AI-generated results. The EDI provides a structured way to understand and respond to that shift.
+      </p>
     </section>
 
-    <section>
-        <h2>Our Methodology</h2>
-        <p>We use our proprietary AI Discoverability Index™ (ADI), a weighted model that evaluates your brand's presence across the AI ecosystem. The ADI evaluates key factors like generative visibility, structured data, trustworthiness, and perception by AI models.</p>
+    <section id="what-is-edi">
+      <h2>What the EntityWorks Discoverability Index™ Is</h2>
+      <p>
+        The EDI is a structured assessment that measures how clearly and reliably a business can be understood by
+        modern AI systems. It turns an emerging, hard-to-see problem into something measurable, structured, and
+        actionable.
+      </p>
+      <p>
+        The EDI provides a practical starting point for improving how a business appears in AI-driven environments.
+      </p>
     </section>
 
-    <section>
-        <h2>Get in Touch</h2>
-        <p>Have questions? Want to learn more about how we can help your brand improve its AI discoverability? <a href="mailto:hello@entityworks.ai">Contact us today!</a></p>
+    <section id="edi-pillars">
+      <h2>What the EDI Measures — The EDI Pillars</h2>
+      <p>The Index evaluates three structural factors that influence how AI understands an entity:</p>
+      <ul>
+        <li><strong>Structured Data</strong> — Foundational information organised and made machine-readable.</li>
+        <li><strong>AI Readiness</strong> — Clear and consistent representation across key sources.</li>
+        <li><strong>Continuous Optimisation</strong> — Maintaining clarity as AI systems evolve.</li>
+      </ul>
     </section>
-</main>
 
-<footer>
-    <p>&copy; 2025 EntityWorks. All Rights Reserved.</p>
-</footer>
+    <section id="how-it-works">
+      <h2>How the EDI Assessment Works</h2>
+      <ol>
+        <li>We analyse publicly available information from key sources.</li>
+        <li>We apply the three EDI Pillars.</li>
+        <li>We produce a <strong>Discoverability Score (0–100)</strong>.</li>
+        <li>We generate a <strong>Profile Summary</strong>.</li>
+        <li>We provide a <strong>Priority Path</strong>.</li>
+        <li>We deliver <strong>structured recommendations</strong>.</li>
+      </ol>
+    </section>
 
+    <section id="improvements">
+      <h2>Improvements Businesses Can Consider</h2>
+      <ul>
+        <li>Clarifying descriptions</li>
+        <li>Improving consistency across sources</li>
+        <li>Strengthening structured data</li>
+        <li>Correcting contradictions and outdated information</li>
+        <li>Reinforcing category placement</li>
+        <li>Addressing representation drift</li>
+      </ul>
+    </section>
+
+    <section id="does-not-measure">
+      <h2>What the EDI Does Not Measure</h2>
+      <p>The EDI does not evaluate product quality, brand strength, marketing performance, financial health, or customer sentiment.</p>
+      <p>It focuses solely on how well AI systems can understand and surface the business.</p>
+    </section>
+
+    <section id="claims-discipline">
+      <h2>Claims Discipline</h2>
+      <p>
+        EntityWorks maintains strict standards for the EDI. All statements are verifiable, truthful, proportionate,
+        non-absolute, and non-misleading.
+      </p>
+    </section>
+
+    <section id="next-steps">
+      <h2>Next Steps</h2>
+      <p>To request an EDI assessment, contact:</p>
+      <p><a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a></p>
+    </section>
+  </main>
 </body>
 </html>
