--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
     <section id="claims-discipline">
       <h2>Claims Discipline</h2>
       <p>
-        EntityWorks maintains strict standards for the EDI. All statements are verifiable, truthful, proportionate,
-        non-absolute, and non-misleading.
+        EntityWorks is commited to upholding high standards for the EDI. All statements are made with accuracy, clarity, and fairness, and are intended to be reasonable and not misleading.       non-absolute, and non-misleading.
       </p>
     </section>
 
@@ -106,3 +105,4 @@
   </main>
 </body>
 </html>
+
