--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <section id="claims-discipline">
       <h2>Claims Discipline</h2>
       <p>
-        EntityWorks is commited to upholding high standards for the EDI. All statements are made with accuracy, clarity, and fairness, and are intended to be reasonable and not misleading.       non-absolute, and non-misleading.
+        EntityWorks is commited to upholding high standards for the EDI. All statements are made with accuracy, clarity, and fairness, and are intended to be reasonable and not misleading.
       </p>
     </section>
 
@@ -105,4 +105,5 @@
   </main>
 </body>
 </html>
+
 
