--- a/index.html
+++ b/index.html
@@ -93,17 +93,15 @@
     <section id="claims-discipline">
       <h2>Claims Discipline</h2>
       <p>
-        EntityWorks is commited to upholding high standards for the EDI. All statements are made with accuracy, clarity, and fairness, and are intended to be reasonable and not misleading.
+        EntityWorks is committed to upholding high standards for the EDI. All statements are made with accuracy, clarity, and fairness, and are intended to be reasonable and not misleading.
       </p>
     </section>
 
     <section id="next-steps">
       <h2>Next Steps</h2>
       <p>To request an EDI assessment, contact:</p>
-      <p><a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a></p>
+      <p><a href="mailto:info@entityworks.ai">info@entityworks.ai</a></p>
     </section>
   </main>
 </body>
 </html>
-
-
