--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <section id="next-steps">
       <h2>Next Steps</h2>
       <p>To request an EDI assessment, contact:</p>
-      <p><a href="mailto:info@entityworks.ai">info@entityworks.ai</a></p>
+      <p><a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a></p>
     </section>
   </main>
 </body>
