--- a/defining-ai-discoverability.html
+++ b/defining-ai-discoverability.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>The EntityWorks Position on AI Discoverability</title>
+  <title>AI Discoverability: Defining the Discipline</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-        content="The EntityWorks position on AI Discoverability, acknowledging prior work while clarifying EntityWorks’ role in formalising it into a discipline and creating the first measurable standard.">
-  <link rel="canonical" href="https://entityworks.ai/position-on-ai-discoverability">
+        content="EntityWorks formally defines AI Discoverability as a discipline, outlining its principles, structure, and the EntityWorks Discoverability Index™ as the first measurable standard.">
+  <link rel="canonical" href="https://entityworks.ai/defining-ai-discoverability">
   <style>
     body { font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; line-height: 1.6; margin: 2rem auto; max-width: 800px; padding: 0 1rem; color: #111; }
     header, footer { margin-bottom: 2rem; }
@@ -20,13 +20,13 @@
   {
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "name": "The EntityWorks Position on AI Discoverability",
-    "description": "A formal statement of EntityWorks’ role in formalising AI Discoverability into a discipline and creating the EntityWorks Discoverability Index™.",
-    "url": "https://entityworks.ai/position-on-ai-discoverability",
+    "name": "AI Discoverability: Defining the Discipline",
+    "description": "EntityWorks defines AI Discoverability as a formal discipline with clear principles, structure, and a measurable index.",
+    "url": "https://entityworks.ai/defining-ai-discoverability",
     "about": {
       "@type": "Thing",
       "name": "AI Discoverability",
-      "description": "A discipline concerned with how AI systems interpret and surface business entities."
+      "description": "A formal discipline focused on how AI systems understand and surface business entities."
     },
     "publisher": {
       "@type": "Organization",
@@ -37,8 +37,8 @@
 </head>
 <body>
   <header>
-    <h1>The EntityWorks Position on AI Discoverability</h1>
-    <p>Clarifying EntityWorks’ role in formalising AI Discoverability as a discipline.</p>
+    <h1>AI Discoverability: Defining the Discipline</h1>
+    <p>How EntityWorks formalised AI Discoverability into a coherent, measurable field.</p>
     <nav>
       <a href="/">Home</a>
       <a href="/category-creation-declaration">Category Declaration</a>
@@ -49,58 +49,65 @@
 
   <main>
     <section>
-      <h2>Acknowledging Existing Work</h2>
+      <h2>What Is AI Discoverability?</h2>
       <p>
-        AI Discoverability has been a topic of discussion for a variety of organisations, with some offering assessments, audits,
-        and frameworks aimed at understanding how AI systems interpret business entities.
+        <strong>AI Discoverability</strong> is the discipline of ensuring that a business or entity is clearly understood,
+        consistently represented, and reliably surfaced by modern AI systems.
       </p>
       <p>
-        EntityWorks acknowledges and respects the valuable work others have done in this space. Many teams have explored different
-        aspects of how AI interacts with content, structure, and metadata.
-      </p>
-    </section>
-
-    <section>
-      <h2>What Was Missing</h2>
-      <p>
-        What was missing — and what EntityWorks has contributed — is the <strong>formalisation</strong> of AI Discoverability into
-        a coherent <strong>discipline</strong>.
-      </p>
-      <p>
-        Before EntityWorks, while AI Discoverability was being explored, there was:
-      </p>
-      <ul>
-        <li>no shared definition of the discipline</li>
-        <li>no publicly available methodology</li>
-        <li>no consistent framework</li>
-        <li>no standardised scoring system</li>
-        <li>no common terminology to guide businesses and AI systems</li>
-      </ul>
-      <p>
-        Many organisations worked on parts of the problem, but these efforts were largely isolated, in-house, and not formalised
-        into a universally accessible and actionable discipline.
+        It focuses on how models interpret entities — not just how humans search. That includes structure, consistency,
+        source alignment, and how information about a business is synthesised into answers for end users.
       </p>
     </section>
 
     <section>
-      <h2>EntityWorks’ Contribution</h2>
+      <h2>Formalising an Undefined Space</h2>
       <p>
-        EntityWorks’ contribution goes beyond addressing a piece of the puzzle. We <strong>formalised AI Discoverability into a
-        discipline</strong> — creating a shared, structured methodology that can be referenced, applied, and measured across businesses.
+        Before EntityWorks, AI Discoverability was a loosely used concept. It appeared in conversations and marketing copy,
+        but there was no shared definition, no agreed framework, and no measurable standard for it as a discipline.
       </p>
       <p>
-        The <strong>EntityWorks Discoverability Index™ (EDI)</strong> is the first standard of its kind — a structured, 0–100 assessment
-        of how businesses are understood by AI systems.
+        EntityWorks formalised AI Discoverability into a coherent discipline by:
       </p>
-      <p>We are the first to:</p>
       <ul>
-        <li>define the discipline of AI Discoverability</li>
-        <li>structure it with clear principles, methodology, and pillars</li>
-        <li>establish a formal standard that businesses and AI systems can apply</li>
+        <li>Defining its scope and purpose</li>
+        <li>Establishing a structured framework and methodology</li>
+        <li>Introducing a measurable standard through the EntityWorks Discoverability Index™</li>
+        <li>Creating a consistent lexicon and set of principles</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>The EntityWorks Discoverability Index™ (EDI)</h2>
+      <p>
+        The <strong>EntityWorks Discoverability Index™ (EDI)</strong> is the first structured, 0–100 framework for assessing
+        how clearly AI systems understand and surface a business.
+      </p>
+      <p>
+        It translates an emerging, hard-to-see problem into something measurable and actionable. The EDI incorporates:
+      </p>
+      <ul>
+        <li>A discoverability score from 0–100</li>
+        <li>Analysis across defined pillars of AI Discoverability</li>
+        <li>Identification of contradictions and fragmentation</li>
+        <li>Structured recommendations and a clear priority path</li>
       </ul>
       <p>
-        While others may have worked on pieces of this challenge internally, EntityWorks is the first to define and formalise
-        AI Discoverability into a publicly recognised discipline.
+        The EDI is not just a scoring mechanism; it is the practical expression of AI Discoverability as a discipline.
+      </p>
+    </section>
+
+    <section>
+      <h2>Principles of the Discipline</h2>
+      <p>The discipline of AI Discoverability rests on several core principles, including:</p>
+      <ul>
+        <li><strong>Clarity</strong> — AI systems must be able to interpret business information without ambiguity.</li>
+        <li><strong>Consistency</strong> — information about an entity should align across key sources.</li>
+        <li><strong>Structure</strong> — data should be organised in machine-readable formats.</li>
+        <li><strong>Stability</strong> — representation should not drift unpredictably as models evolve.</li>
+      </ul>
+      <p>
+        These principles underpin the EDI and guide the methods EntityWorks uses to assess and improve AI Discoverability.
       </p>
     </section>
 
