--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
         <li><a href="/position-on-ai-discoverability.html">EntityWorks Position on AI Discoverability</a></li>
       </ul>
     </section>
+
+    <section>
+      <h2>Contact Us</h2>
+      <p>If you have any questions or would like to learn more, feel free to <a href="mailto:hello@entityworks.ai">email us</a>!</p>
+    </section>
   </main>
 
   <footer>
