--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
       <a href="/category-creation-declaration.html">Category Declaration</a>
       <a href="/defining-ai-discoverability.html">Defining the Discipline</a>
       <a href="/position-on-ai-discoverability.html">EntityWorks Position</a>
-    </nav>
+      <a href="/lexicon.html">Lexicon</a>
+</nav>
   </header>
 
   <main>
@@ -83,3 +84,4 @@
   </footer>
 </body>
 </html>
+
