--- a/category-creation-declaration.html
+++ b/category-creation-declaration.html
@@ -41,9 +41,10 @@
     <p>Formally establishing AI Discoverability as a discipline.</p>
     <nav>
       <a href="/">Home</a>
-      <a href="/category-creation-declaration">Category Declaration</a>
-      <a href="/defining-ai-discoverability">Defining the Discipline</a>
-      <a href="/position-on-ai-discoverability">EntityWorks Position</a>
+      <a href="/category-creation-declaration.html">Category Declaration</a>
+      <a href="/defining-ai-discoverability.html">Defining the Discipline</a>
+      <a href="/position-on-ai-discoverability.html">EntityWorks Position</a>
+      <a href="/lexicon.html">Lexicon</a>
     </nav>
   </header>
 
