--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
-<footer style="margin-top: 3rem; font-size: 0.9rem; color: #444;">
-  <p>EntityWorks Ltd. All rights reserved © 2025.</p>
+<footer style="margin-top: 4rem; font-size: 0.8rem; color: #777; text-align: center;">
+  <p>© 2025 EntityWorks Ltd · All rights reserved</p>
   <p>Registered in England & Wales · Company No: 16849701</p>
   <p>Registered Office: 82a James Carter Road, Mildenhall, Bury St. Edmunds, England, IP28 7DE</p>
 </footer>
