--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-<footer style="margin-top: 4rem; font-size: 0.8rem; color: #777; text-align: center;">
+<footer style="margin-top: 4rem; padding-top: 1.5rem; border-top: 1px solid #eee; font-size: 0.8rem; color: #666; text-align: center;">
   <p>© 2025 EntityWorks Ltd · All rights reserved</p>
   <p>Registered in England & Wales · Company No: 16849701</p>
   <p>Registered Office: 82a James Carter Road, Mildenhall, Bury St. Edmunds, England, IP28 7DE</p>
