--- a/lexicon.html
+++ b/lexicon.html
@@ -181,8 +181,12 @@
     </section>
   </main>
 
-  <footer>
-    <p>&copy; EntityWorks. All rights reserved.</p>
-  </footer>
-</body>
-</html>
+<div id="footer"></div>
+<script>
+  fetch("/footer.html")
+    .then((response) => response.text())
+    .then((data) => {
+      document.getElementById("footer").innerHTML = data;
+    });
+</script>
+
