--- a/privacy.html
+++ b/privacy.html
@@ -1,71 +1,87 @@
-<h1>Privacy & GDPR Notice</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Privacy & GDPR — EntityWorks</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="EntityWorks Privacy & GDPR Notice">
+  <style>
+    body { font-family: system-ui, sans-serif; line-height: 1.6; margin: 2rem auto; max-width: 800px; padding: 0 1rem; color: #111; }
+    h1 { font-size: 1.8rem; margin-bottom: 1rem; }
+    h2 { margin-top: 1.75rem; }
+    p, li { margin-bottom: 0.75rem; }
+  </style>
+</head>
+<body>
 
-<p><strong>Last updated: January 2025</strong></p>
+  <h1>Privacy & GDPR Notice</h1>
 
-<p>
-EntityWorks Ltd (“we”, “us”, “our”) operates https://entityworks.ai.
-We are committed to protecting your privacy and being clear about how we use data.
-</p>
+  <p><strong>Last updated: January 2025</strong></p>
 
-<h2>1. We Do Not Collect Personal Data</h2>
-<p>
-EntityWorks does not collect, store, process, or track any personal information from visitors to this website.
-</p>
-<p>
-We do not use:
-</p>
-<ul>
-  <li>cookies</li>
-  <li>analytics tools (e.g., Google Analytics, Meta Pixel, etc.)</li>
-  <li>user accounts or sign-ins</li>
-  <li>contact forms</li>
-  <li>tracking scripts or profiling technologies</li>
-</ul>
+  <p>
+    EntityWorks Ltd (“we”, “us”, “our”) operates https://entityworks.ai.  
+    We are committed to protecting your privacy and being transparent about how we use data.
+  </p>
 
-<h2>2. Voluntary Contact</h2>
-<p>
-If you choose to contact us by email at <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>,
-your message will be processed only for the purpose of responding to your enquiry.
-</p>
-<p>
-We do not add your details to marketing lists, share them with third parties,
-or store them beyond what is necessary for communication.
-</p>
+  <h2>1. We Do Not Collect Personal Data</h2>
+  <p>
+    EntityWorks does not collect, store, process, or track any personal information from visitors to this website.
+  </p>
 
-<h2>3. Legal Basis (Article 6 GDPR)</h2>
-<p>
-If you email us, our legal basis for processing your message is:
-<strong>Legitimate Interest — responding to an enquiry you initiated.</strong>
-</p>
+  <h2>2. Cookie & Tracking Statement</h2>
+  <p><strong>
+    EntityWorks does not use cookies, analytics tools, or any tracking technologies.  
+    No information is stored on your device and no behavioural data is collected.
+  </strong></p>
 
-<h2>4. Hosting & Security</h2>
-<p>
-This website is hosted on GitHub Pages. GitHub may collect minimal technical logs
-(e.g., IP addresses) for security and prevention of misuse.  
-These logs are controlled by GitHub and processed under their privacy policy.
-</p>
+  <h2>3. Voluntary Contact</h2>
+  <p>
+    If you choose to contact us by email at 
+    <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>,
+    your message will be processed solely for the purpose of responding to your enquiry.
+  </p>
+  <p>
+    We do not add your details to marketing lists, share them with third parties, or retain them longer than necessary.
+  </p>
 
-<h2>5. Your Rights</h2>
-<p>Under UK GDPR, you have the right to:</p>
-<ul>
-  <li>access your personal data (if you have emailed us)</li>
-  <li>request correction or deletion</li>
-  <li>object to processing</li>
-</ul>
+  <h2>4. Legal Basis for Processing (Article 6 UK GDPR)</h2>
+  <p>
+    If you email us, our legal basis for processing your message is:
+    <strong>Legitimate Interest — responding to an enquiry you initiated.</strong>
+  </p>
 
-<p>If you wish to exercise any of these rights, contact us at:
-<a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>.
-</p>
+  <h2>5. Hosting & Technical Logs</h2>
+  <p>
+    This website is hosted on GitHub Pages.  
+    GitHub may collect minimal technical logs (e.g., IP address) for security and misuse prevention.  
+    These logs are controlled by GitHub under their own privacy policy.
+  </p>
 
-<h2>6. Changes to This Notice</h2>
-<p>
-We may update this notice from time to time. The latest version will always be published on this page.
-</p>
+  <h2>6. Your Rights</h2>
+  <p>Under the UK GDPR, you have the right to:</p>
+  <ul>
+    <li>access your personal data (if you have emailed us)</li>
+    <li>request correction or deletion</li>
+    <li>object to processing</li>
+  </ul>
 
-<h2>7. Contact Information</h2>
-<p>
-EntityWorks Ltd  
-Registered Office: 82a James Carter Road, Mildenhall,<br>
-Bury St. Edmunds, England, IP28 7DE  
-Company No: 16849701
-</p>
+  <p>To exercise any of these rights, email us at  
+    <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>.
+  </p>
+
+  <h2>7. Changes to This Notice</h2>
+  <p>
+    We may update this notice when necessary.  
+    The latest version will always be available on this page.
+  </p>
+
+  <h2>8. Contact Information</h2>
+  <p>
+    EntityWorks Ltd<br>
+    Registered Office: 82a James Carter Road, Mildenhall,<br>
+    Bury St. Edmunds, England, IP28 7DE<br>
+    Company No: 16849701
+  </p>
+
+</body>
+</html>
