--- a/privacy.html
+++ b/privacy.html
@@ -16,7 +16,7 @@
 
   <h1>Privacy & GDPR Notice</h1>
 
-  <p><strong>Last updated: January 2025</strong></p>
+  <p><strong>Last updated: 15th November 2025</strong></p>
 
   <p>
     EntityWorks Ltd (“we”, “us”, “our”) operates https://entityworks.ai.  
