--- a/footer.html
+++ b/footer.html
@@ -2,6 +2,9 @@
   <p>© 2025 EntityWorks Ltd · All rights reserved</p>
   <p>Registered in England & Wales · Company No: 16849701</p>
   <p>Registered Office: 82a James Carter Road, Mildenhall, Bury St. Edmunds, England, IP28 7DE</p>
-  <p><a href="/privacy.html" style="color: #666; text-decoration: none;">Privacy & GDPR</a></p>
+  <p>
+    <a href="/privacy.html" style="color: #666; text-decoration: none; margin-right: 1rem;">Privacy & GDPR</a>
+    <a href="/legal.html" style="color: #666; text-decoration: none;">Legal</a>
+  </p>
 </footer>
 
