--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
     </section>
   </main>
 
+<p style="font-size: 0.85rem; color: #888; margin-top: 3rem;">
+  Last updated: November 2025
+</p>
+
+  
 <div id="footer"></div>
 <script>
   fetch("/footer.html")
@@ -90,6 +95,7 @@
       document.getElementById("footer").innerHTML = data;
     });
 </script>
+
 
 
 
