--- a/lexicon.html
+++ b/lexicon.html
@@ -181,6 +181,10 @@
     </section>
   </main>
 
+<p style="font-size: 0.85rem; color: #888; margin-top: 3rem;">
+  Last updated: January 2025
+</p>
+  
 <div id="footer"></div>
 <script>
   fetch("/footer.html")
