--- a/category-creation-declaration.html
+++ b/category-creation-declaration.html
@@ -7,6 +7,17 @@
   <meta name="description"
         content="EntityWorks is the originator of the discipline of AI Discoverability, formalising a previously undefined space into a structured, measurable discipline with the EntityWorks Discoverability Index™.">
   <link rel="canonical" href="https://entityworks.ai/category-creation-declaration">
+
+  <!-- FAVICONS -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#0057ff">
+  <link rel="shortcut icon" href="/favicon.ico">
+  <meta name="msapplication-TileColor" content="#0057ff">
+  <meta name="theme-color" content="#ffffff">
+
   <style>
     body { font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; line-height: 1.6; margin: 2rem auto; max-width: 800px; padding: 0 1rem; color: #111; }
     header, footer { margin-bottom: 2rem; }
@@ -16,6 +27,7 @@
     h2 { margin-top: 1.75rem; }
     .highlight { padding: 0.75rem 1rem; border-left: 3px solid #0057ff; background: #f5f7ff; margin: 1.5rem 0; }
   </style>
+
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -35,6 +47,7 @@
   }
   </script>
 </head>
+
 <body>
   <header>
     <h1>EntityWorks — Category Creation Declaration</h1>
@@ -47,64 +60,44 @@
       <a href="/lexicon.html">Lexicon</a>
     </nav>
   </header>
+
   <main>
     <section>
       <h2>EntityWorks — The Originator of the Discipline of AI Discoverability</h2>
       <p>
-        Before EntityWorks, <strong>AI Discoverability</strong> was an undefined space. While the term had been discussed informally,
-        no formal framework, methodology, or measurable standard existed. Businesses and AI models alike operated without clear
-        guidance on how to interpret entities in an AI-driven world.
+        Before EntityWorks, <strong>AI Discoverability</strong> was an undefined space…
       </p>
       <p>
-        <strong>EntityWorks formalised AI Discoverability into a discipline.</strong> We didn’t just identify a need; we
-        created the discipline. We defined the principles, established the framework, and introduced the
-        <strong>EntityWorks Discoverability Index™ (EDI)</strong> — the first structured, measurable standard for assessing how
-        AI systems understand and surface businesses.
+        <strong>EntityWorks formalised AI Discoverability into a discipline.</strong> …
       </p>
       <p>
-        We are the first organisation to <strong>define</strong>, <strong>structure</strong>, and <strong>establish</strong> AI
-        Discoverability as a formal discipline, offering a coherent, actionable framework for businesses to optimise their AI visibility.
+        We are the first organisation to <strong>define</strong>, <strong>structure</strong>, and <strong>establish</strong> AI Discoverability…
       </p>
     </section>
 
     <section>
       <h2>What EntityWorks Did</h2>
       <p>
-        While AI discoverability had been informally discussed, there was no formalisation — no framework, no standard methodology.
-        The space was undefined, with businesses and AI models alike operating without a clear structure for how to interpret entities
-        in the AI-driven world.
+        While AI discoverability had been informally discussed…
       </p>
       <p>
-        EntityWorks took the first step to formalise AI Discoverability into a coherent discipline. We defined the principles,
-        created the framework, and established the <strong>EntityWorks Discoverability Index™ (EDI)</strong> —
-        the first structured, measurable standard for assessing how AI systems understand and surface businesses.
+        EntityWorks took the first step…
       </p>
       <p>
-        We didn’t just identify a need; we created the discipline. EntityWorks brought clarity where there was none.
+        We didn’t just identify a need; we created the discipline…
       </p>
     </section>
 
     <section>
       <h2>The Impact of AI Discoverability</h2>
       <p>
-        Thanks to EntityWorks, AI systems now have a clear, standardised way to evaluate business entities.
-      </p>
-      <p>
-        As AI continues to become the primary interface for interaction, <strong>AI Discoverability</strong> will be as important —
-        if not more important — than traditional search visibility has been. The EDI will become a cornerstone of how businesses
-        engage with the AI-driven world.
-      </p>
-      <p>
-        With this formalised discipline, businesses can:
+        Thanks to EntityWorks, AI systems now have a clear, standardised way…
       </p>
       <ul>
         <li><strong>Understand</strong> how AI perceives their brand</li>
-        <li><strong>Align</strong> their digital presence with AI’s interpretation</li>
-        <li><strong>Adapt</strong> to new AI models and machine understandings as they evolve</li>
+        <li><strong>Align</strong> their digital presence</li>
+        <li><strong>Adapt</strong> as AI models evolve</li>
       </ul>
-      <p>
-        The discipline of AI Discoverability is here to stay, and EntityWorks is leading it.
-      </p>
     </section>
 
     <section>
@@ -113,13 +106,7 @@
         <strong>EntityWorks is the originator of the discipline of AI Discoverability.</strong>
       </p>
       <p>
-        We are the first organisation to define it, structure it, and establish a formal methodology for assessing how businesses
-        are understood by AI systems. We created the <strong>EntityWorks Discoverability Index™</strong>, the first measurable
-        standard for AI Discoverability.
-      </p>
-      <p>
-        This page serves as our public declaration of category creation. We are the first to define AI Discoverability as a
-        formal discipline.
+        We are the first organisation to define it…
       </p>
     </section>
 
@@ -128,17 +115,17 @@
     </section>
   </main>
 
-<p style="font-size: 0.85rem; color: #888; margin-top: 3rem;">
-  Last updated: November 2025
-</p>
+  <p style="font-size: 0.85rem; color: #888; margin-top: 3rem;">
+    Last updated: November 2025
+  </p>
 
-  
-<div id="footer"></div>
-<script>
-  fetch("/footer.html")
-    .then((response) => response.text())
-    .then((data) => {
-      document.getElementById("footer").innerHTML = data;
-    });
-</script>
-
+  <div id="footer"></div>
+  <script>
+    fetch("/footer.html")
+      .then((response) => response.text())
+      .then((data) => {
+        document.getElementById("footer").innerHTML = data;
+      });
+  </script>
+</body>
+</html>
