--- a/category-creation-declaration.html
+++ b/category-creation-declaration.html
@@ -27,7 +27,6 @@
     h2 { margin-top: 1.75rem; }
     .highlight { padding: 0.75rem 1rem; border-left: 3px solid #0057ff; background: #f5f7ff; margin: 1.5rem 0; }
   </style>
-
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -47,7 +46,6 @@
   }
   </script>
 </head>
-
 <body>
   <header>
     <h1>EntityWorks — Category Creation Declaration</h1>
@@ -60,44 +58,64 @@
       <a href="/lexicon.html">Lexicon</a>
     </nav>
   </header>
-
   <main>
     <section>
       <h2>EntityWorks — The Originator of the Discipline of AI Discoverability</h2>
       <p>
-        Before EntityWorks, <strong>AI Discoverability</strong> was an undefined space…
+        Before EntityWorks, <strong>AI Discoverability</strong> was an undefined space. While the term had been discussed informally,
+        no formal framework, methodology, or measurable standard existed. Businesses and AI models alike operated without clear
+        guidance on how to interpret entities in an AI-driven world.
       </p>
       <p>
-        <strong>EntityWorks formalised AI Discoverability into a discipline.</strong> …
+        <strong>EntityWorks formalised AI Discoverability into a discipline.</strong> We didn’t just identify a need; we
+        created the discipline. We defined the principles, established the framework, and introduced the
+        <strong>EntityWorks Discoverability Index™ (EDI)</strong> — the first structured, measurable standard for assessing how
+        AI systems understand and surface businesses.
       </p>
       <p>
-        We are the first organisation to <strong>define</strong>, <strong>structure</strong>, and <strong>establish</strong> AI Discoverability…
+        We are the first organisation to <strong>define</strong>, <strong>structure</strong>, and <strong>establish</strong> AI
+        Discoverability as a formal discipline, offering a coherent, actionable framework for businesses to optimise their AI visibility.
       </p>
     </section>
 
     <section>
       <h2>What EntityWorks Did</h2>
       <p>
-        While AI discoverability had been informally discussed…
+        While AI discoverability had been informally discussed, there was no formalisation — no framework, no standard methodology.
+        The space was undefined, with businesses and AI models alike operating without a clear structure for how to interpret entities
+        in the AI-driven world.
       </p>
       <p>
-        EntityWorks took the first step…
+        EntityWorks took the first step to formalise AI Discoverability into a coherent discipline. We defined the principles,
+        created the framework, and established the <strong>EntityWorks Discoverability Index™ (EDI)</strong> —
+        the first structured, measurable standard for assessing how AI systems understand and surface businesses.
       </p>
       <p>
-        We didn’t just identify a need; we created the discipline…
+        We didn’t just identify a need; we created the discipline. EntityWorks brought clarity where there was none.
       </p>
     </section>
 
     <section>
       <h2>The Impact of AI Discoverability</h2>
       <p>
-        Thanks to EntityWorks, AI systems now have a clear, standardised way…
+        Thanks to EntityWorks, AI systems now have a clear, standardised way to evaluate business entities.
+      </p>
+      <p>
+        As AI continues to become the primary interface for interaction, <strong>AI Discoverability</strong> will be as important —
+        if not more important — than traditional search visibility has been. The EDI will become a cornerstone of how businesses
+        engage with the AI-driven world.
+      </p>
+      <p>
+        With this formalised discipline, businesses can:
       </p>
       <ul>
         <li><strong>Understand</strong> how AI perceives their brand</li>
-        <li><strong>Align</strong> their digital presence</li>
-        <li><strong>Adapt</strong> as AI models evolve</li>
+        <li><strong>Align</strong> their digital presence with AI’s interpretation</li>
+        <li><strong>Adapt</strong> to new AI models and machine understandings as they evolve</li>
       </ul>
+      <p>
+        The discipline of AI Discoverability is here to stay, and EntityWorks is leading it.
+      </p>
     </section>
 
     <section>
@@ -106,7 +124,13 @@
         <strong>EntityWorks is the originator of the discipline of AI Discoverability.</strong>
       </p>
       <p>
-        We are the first organisation to define it…
+        We are the first organisation to define it, structure it, and establish a formal methodology for assessing how businesses
+        are understood by AI systems. We created the <strong>EntityWorks Discoverability Index™</strong>, the first measurable
+        standard for AI Discoverability.
+      </p>
+      <p>
+        This page serves as our public declaration of category creation. We are the first to define AI Discoverability as a
+        formal discipline.
       </p>
     </section>
 
@@ -115,17 +139,18 @@
     </section>
   </main>
 
-  <p style="font-size: 0.85rem; color: #888; margin-top: 3rem;">
-    Last updated: November 2025
-  </p>
+<p style="font-size: 0.85rem; color: #888; margin-top: 3rem;">
+  Last updated: November 2025
+</p>
 
-  <div id="footer"></div>
-  <script>
-    fetch("/footer.html")
-      .then((response) => response.text())
-      .then((data) => {
-        document.getElementById("footer").innerHTML = data;
-      });
-  </script>
+  
+<div id="footer"></div>
+<script>
+  fetch("/footer.html")
+    .then((response) => response.text())
+    .then((data) => {
+      document.getElementById("footer").innerHTML = data;
+    });
+</script>
 </body>
 </html>
