--- a/defining-ai-discoverability.html
+++ b/defining-ai-discoverability.html
@@ -64,7 +64,7 @@
       <h2>Formalising an Undefined Space</h2>
       <p>
         Before EntityWorks, AI Discoverability was a loosely used concept. It appeared in conversations and marketing copy,
-        but there was no shared definition, no agreed framework, and no measurable standard for it as a discipline.
+        but there was no shared definition, no agreed framework, and no measurable standard for it as a formal discipline.
       </p>
       <p>
         EntityWorks formalised AI Discoverability into a coherent discipline by:
