--- a/defining-ai-discoverability.html
+++ b/defining-ai-discoverability.html
@@ -80,7 +80,7 @@
     <section>
       <h2>The EntityWorks Discoverability Index™ (EDI)</h2>
       <p>
-        The <strong>EntityWorks Discoverability Index™ (EDI)</strong> is the first structured, 0–100 framework for assessing
+        The <strong>EntityWorks Discoverability Index™ (EDI)</strong> is a structured 0–100 framework for assessing
         how clearly AI systems understand and surface a business.
       </p>
       <p>
