--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="EntityWorks is the leader in AI Discoverability, the formal discipline of optimising businesses for machine legibility and visibility.">
   <link rel="canonical" href="https://entityworks.ai/">
+
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
   <style>
     body { font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; line-height: 1.6; margin: 2rem auto; max-width: 800px; padding: 0 1rem; color: #111; }
     header, footer { margin-bottom: 2rem; }
@@ -19,6 +21,7 @@
     h2 { margin-top: 1.75rem; }
     .highlight { padding: 0.75rem 1rem; border-left: 3px solid #0057ff; background: #f5f7ff; margin: 1.5rem 0; }
   </style>
+
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -33,18 +36,22 @@
   }
   </script>
 </head>
+
 <body>
   <header>
     <h1>Welcome to EntityWorks</h1>
     <p>Your partner in mastering AI Discoverability.</p>
+
     <nav>
       <a href="/">Home</a>
       <a href="/category-creation-declaration.html">Category Declaration</a>
       <a href="/defining-ai-discoverability.html">Defining the Discipline</a>
       <a href="/position-on-ai-discoverability.html">EntityWorks Position</a>
+      <a href="/discoverability-index.html">Discoverability Index</a>
       <a href="/lexicon.html">Lexicon</a>
-</nav>
+    </nav>
   </header>
+
   <main>
     <section>
       <h2>What is AI Discoverability?</h2>
@@ -82,23 +89,17 @@
     </section>
   </main>
 
-<p style="font-size: 0.85rem; color: #888; margin-top: 3rem;">
-  Last updated: November 2025
-</p>
+  <p style="font-size: 0.85rem; color: #888; margin-top: 3rem;">
+    Last updated: November 2025
+  </p>
 
-  
-<div id="footer"></div>
-<script>
-  fetch("/footer.html")
-    .then(response => response.text())
-    .then(data => {
-      document.getElementById("footer").innerHTML = data;
-    });
-</script>
-
-
-
-
-
-
-
+  <div id="footer"></div>
+  <script>
+    fetch("/footer.html")
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById("footer").innerHTML = data;
+      });
+  </script>
+</body>
+</html>
