--- a/category-creation-declaration.html
+++ b/category-creation-declaration.html
@@ -27,6 +27,7 @@
     h2 { margin-top: 1.75rem; }
     .highlight { padding: 0.75rem 1rem; border-left: 3px solid #0057ff; background: #f5f7ff; margin: 1.5rem 0; }
   </style>
+
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -46,18 +47,22 @@
   }
   </script>
 </head>
+
 <body>
   <header>
     <h1>EntityWorks — Category Creation Declaration</h1>
     <p>Formally establishing AI Discoverability as a discipline.</p>
+
     <nav>
       <a href="/">Home</a>
       <a href="/category-creation-declaration.html">Category Declaration</a>
       <a href="/defining-ai-discoverability.html">Defining the Discipline</a>
       <a href="/position-on-ai-discoverability.html">EntityWorks Position</a>
+      <a href="/discoverability-index.html">Discoverability Index</a>
       <a href="/lexicon.html">Lexicon</a>
     </nav>
   </header>
+
   <main>
     <section>
       <h2>EntityWorks — The Originator of the Discipline of AI Discoverability</h2>
@@ -122,18 +127,17 @@
     </section>
   </main>
 
-<p style="font-size: 0.85rem; color: #888; margin-top: 3rem;">
-  Last updated: November 2025
-</p>
+  <p style="font-size: 0.85rem; color: #888; margin-top: 3rem;">
+    Last updated: November 2025
+  </p>
 
-  
-<div id="footer"></div>
-<script>
-  fetch("/footer.html")
-    .then((response) => response.text())
-    .then((data) => {
-      document.getElementById("footer").innerHTML = data;
-    });
-</script>
+  <div id="footer"></div>
+  <script>
+    fetch("/footer.html")
+      .then((response) => response.text())
+      .then((data) => {
+        document.getElementById("footer").innerHTML = data;
+      });
+  </script>
 </body>
 </html>
