--- a/lexicon.html
+++ b/lexicon.html
@@ -7,6 +7,7 @@
   <meta name="description"
         content="The EntityWorks Lexicon defines the core vocabulary of AI Discoverability, including key terms used in the EntityWorks Discoverability Index™ (EDI) and Presence Stack™.">
   <link rel="canonical" href="https://entityworks.ai/lexicon.html">
+
   <style>
     body { font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; line-height: 1.6; margin: 2rem auto; max-width: 900px; padding: 0 1rem; color: #111; }
     header, footer { margin-bottom: 2rem; }
@@ -19,6 +20,7 @@
     .intro { margin-top: 1rem; }
     .tagline { font-style: italic; margin-top: 0.5rem; }
   </style>
+
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -38,6 +40,7 @@
   }
   </script>
 </head>
+
 <body>
   <header>
     <h1>EntityWorks Lexicon</h1>
@@ -47,11 +50,13 @@
     <p class="tagline">
       These definitions support the EntityWorks Discoverability Index™ (EDI) and the Presence Stack™ model.
     </p>
+
     <nav>
       <a href="/">Home</a>
       <a href="/category-creation-declaration.html">Category Declaration</a>
       <a href="/defining-ai-discoverability.html">Defining the Discipline</a>
       <a href="/position-on-ai-discoverability.html">EntityWorks Position</a>
+      <a href="/discoverability-index.html">Discoverability Index</a>
       <a href="/lexicon.html">Lexicon</a>
     </nav>
   </header>
@@ -181,16 +186,18 @@
     </section>
   </main>
 
-<p style="font-size: 0.85rem; color: #888; margin-top: 3rem;">
-  Last updated: November 2025
-</p>
-  
-<div id="footer"></div>
-<script>
-  fetch("/footer.html")
-    .then((response) => response.text())
-    .then((data) => {
-      document.getElementById("footer").innerHTML = data;
-    });
-</script>
+  <p style="font-size: 0.85rem; color: #888; margin-top: 3rem;">
+    Last updated: November 2025
+  </p>
 
+  <div id="footer"></div>
+  <script>
+    fetch("/footer.html")
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById("footer").innerHTML = data;
+      });
+  </script>
+
+</body>
+</html>
